--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "convert-string": "^0.1.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-android-location-enabler": "^2.0.1",
+    "react-native-ble-manager": "^10.1.5",
     "react-native-ble-plx": "^3.1.2-rc.0"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/convert-string": "^0.1.3",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
