--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.72.6",
     "react-native-android-location-enabler": "^2.0.1",
     "react-native-ble-manager": "^10.1.5",
-    "react-native-ble-plx": "^3.1.2-rc.0"
+    "react-native-ble-plx": "^3.1.2-rc.0",
+    "react-native-device-info": "^10.12.0",
+    "react-native-permissions": "^4.0.0",
+    "react-native-quick-base64": "^2.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
