--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "convert-string": "^0.1.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -18,7 +21,9 @@
     "react-native-ble-plx": "^3.1.2-rc.0",
     "react-native-device-info": "^10.12.0",
     "react-native-permissions": "^4.0.0",
-    "react-native-quick-base64": "^2.0.7"
+    "react-native-quick-base64": "^2.0.7",
+    "react-native-safe-area-context": "^4.8.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
