--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-permissions": "^4.0.0",
     "react-native-quick-base64": "^2.0.7",
     "react-native-safe-area-context": "^4.8.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
